🛠️ Fix illustration overflow

--- a/styles/style.css
+++ b/styles/style.css
@@ -68,17 +68,18 @@ body {
 }
 
 .text-output {
-	margin: var(--size-600) 0 0 0;
+	margin-top: var(--size-600);
 	text-align: center;
 	border: 1px solid black;
 	border-radius: var(--size-600);
 	box-shadow: 0px 24px 32px rgba(0, 0, 0, 0.08);
+	overflow-wrap: break-word;
+	overflow-x: clip;
 }
 
 .toggle-img {
 	display: none;
 	margin-bottom: var(--size-500);
-
 }
 
 .button {
@@ -94,7 +95,6 @@ body {
 	background-color: var(--clr-white);
 }
 
-/* @media screen and (min-width: 50em) { */
 @media screen and (min-width: 90em) {
 	.container {
 		grid-auto-flow: column;
@@ -104,14 +104,13 @@ body {
 	.buttons {
 		grid-auto-flow: column;
 		grid-auto-columns: 1fr;
-
 	}
 
 	.toggle-img {
 		display: block;
 	}
 
-	.text-output{
+	.text-output {
 		max-height: 100vh;
 		padding-block: 25%;
 		position: relative;
